tests/front_end/input/variable_use_analysis/errors/function_not_found.wl
// Error at line 3, column 12: Function `call` not found
int main() {
    return call();
}